profile picture and update to permissions on the looking for jobs
